# speech_interaction

./: .gitignore  CMakeLists.txt  README.md
src/: speech_interaction_base.cpp  speech_interaction_base.h  speech_interaction_strategy.h
src/ifly_tuling/: ifly_tuling.cpp  ifly_tuling_interface.h  ifly_tuling_params.h
src/ifly_tuling/broadcast_interface/: broadcast_interface.c  sndwav_common.c  sndwav_common.h  wav_parser.c  wav_parser.h
src/ifly_tuling/ifly_interface/: speech_recognition_interface.c  speech_recognizer.c  speech_synthesizer_interface.c
src/ifly_tuling/tuling_interface/: tuling_interface.cpp
test/: CMakeLists.txt  README.md  glog_speech.cpp  glog_speech.h  main.cpp
